<resources>
    <string name="app_name">CalculoSalario</string>
    <string name="horas_trabalhadas">Horas Trabalhadas</string>
    <string name="digite_o_n_mero_de_horas_trabalhadas">Digite o número de horas trabalhadas</string>
    <string name="valor_da_hora">Valor da hora</string>
    <string name="digite_o_valor_de_cada_hora">Digite o valor de cada hora</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">"R$ %.2f</string>
    <string name="entrada_invalida">Entradas inválidas!</string>
</resources>