<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/horas_trabalhadas"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtHoras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/digite_o_n_mero_de_horas_trabalhadas"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/valor_da_hora"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/edtValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_valor_de_cada_hora"
        android:inputType="numberDecimal"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button"
        android:paddingHorizontal="48dp"
        android:text="@string/calcular"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="36sp" />
</LinearLayout>